--- a/slides-colab.Rmd
+++ b/slides-colab.Rmd
@@ -101,6 +101,14 @@ __Le projet `utilitR` est un laboratoire qui préfigure les évolutions des mét
 
 ---
 # 1. Présentation du projet
+## Une démarche collaborative et _open source_
+
+```{r, echo = FALSE}
+knitr::include_graphics("https://i2.wp.com/akramsideas.com/wp-content/uploads/2013/07/minions.jpg")
+```
+
+---
+# 1. Présentation du projet
 ## Méthode de travail : reproductibilité et qualité
 
 Le dépôt [`Github` `r fontawesome::fa("fab fa-github")` d'`utilitR`](https://github.com/InseeFrLab/utilitR) propose :
@@ -153,6 +161,23 @@ La documentation est diffusée sous trois formes :
 <br>
 **Vous pouvez rejoindre l'équipe de contributeurs à tout moment.**
 
+---
+# 2. Fonctionnement du projet
+## Organisation du projet
+
+<table>
+   <tr>
+      <td>Les contributeurs</td>
+
+      <td>Le comité de parrainage</td>
+  </tr>
+  <tr>
+    <td> <img src="https://c.files.bbci.co.uk/D635/production/_87373845_stormtroopers_getty976b.jpg"  alt="1" width = 360px height = 360px ></td>
+
+    <td><img src="https://static.wikia.nocookie.net/villains-fr/images/f/f3/B5f3dfc780d9ebd09b58c8dbf3c4c623.jpg/revision/latest?cb=20200714190423&path-prefix=fr" alt="2" width = 360px height = 360px></td>
+   </tr> 
+</table>
+
 
 ---
 # 2. Fonctionnement du projet
@@ -165,40 +190,41 @@ knitr::include_graphics("./resources/githubCI.png")
 ```
 
 
+
 ---
-# 3. Quelles sont nos conclusions ?
-## Git `r fontawesome::fa("fab fa-git-alt")` + Github `r fontawesome::fa("fab fa-github")`: un **écosystème efficace**
+# 3. Retour d'expérience
+## Git `r fontawesome::fa("fab fa-git-alt")` et Github `r fontawesome::fa("fab fa-github")`: un **écosystème efficace**
 
 * une __unique source de vérité__ avec au même endroit:
     + le contenu validé ;
     + le contenu en cours de rédaction ;
 * **pas de mail** pour s'échanger des fichiers ou des informations ;
 * organiser le travail collaboratif de façon **ouverte** et **transparente** :
-    + tout le monde peut proposer des modifications (de la correction de coquille à la rédaction d'une fiche) ;
+    + tout le monde peut proposer des modifications (correction coquille, rédaction fiche, etc.) ;
     + tout le monde peut donner son avis.
 
 * **Pas besoin d'être un expert `Git`** pour contribuer à un projet collaboratif
     + Besoin d'un ou deux facilitateurs ou coach `Git` ;
     + Intérêt d'avoir une messagerie instantanée `r fontawesome::fa("fas fa-comment")` en complément ;
     + Proposer des modalités de contribution facilitées (bouton *Edit this page* `r fontawesome::fa("fab fa-github")` sur le site)
-    + Informations importantes à archiver dans le projet, pas dans une boîte mail
+    + Informations importantes à archiver directement dans le projet, pas dans une boîte mail
 
 ---
-# 3. Quelles sont nos conclusions ?
-## Git `r fontawesome::fa("fab fa-git-alt")` + Github `r fontawesome::fa("fab fa-github")`: **cela ne suffit pas**
+# 3. Retour d'expérience
+## Git `r fontawesome::fa("fab fa-git-alt")` et Github `r fontawesome::fa("fab fa-github")`: **ce n'est pas suffisant**
 
-* Il faut de la **communication**.
+* Il faut de la **communication** `r emo::ji("comment")`.
 * Besoin d'un outil de communication collaboratif en parallèle
     + Tchap
 * Permet de faire circuler l'information :
     + publication nouvelle fiche
-    + besoin relecteur ou rédacteur+
+    + besoin relecteur ou rédacteur
     + *debug*
     + blagues...
 
     
 ---
-# 3. Quelles sont nos conclusions ?
+# 3. Retour d'expérience
 ## Résultats
 
 * traçabilité parfaite ;
@@ -211,6 +237,31 @@ knitr::include_graphics("./resources/githubCI.png")
 <br>
 __On peut faire des trucs de fou avec Rmardown associé à Git + Github/Gitlab : un site web et un livre de 350 pages avec les mêmes fichiers sources__
 
+---
+# 3. Retour d'expérience
+## Une "petite" bourde lors de la transition de Gitlab à Github (décembre 2020)
+
+* Volonté de ne pas perdre l'historique du dépôt (commits, issues, pull request)
+
+* Utilisation d'un super outil:  [node-gitlab-2-github](https://github.com/piceaTech/node-gitlab-2-github)
+    + fait le lien entre les comptes Gitlab et Github
+
+* problème: j'ai oublié de désactiver la notification mail
+* Résultat: Olivier a reçu 2700 mails `r emo::ji("sweat_smile")`
+
+```{r, echo = FALSE, out.width="50%", fig.show="hold"}
+knitr::include_graphics("resources/Spamomatic.jpg")
+knitr::include_graphics("resources/Spamomatic2.jpg")
+```
+
+
+---
+# 3. Retour d'expérience
+## Les mainteneurs du projet
+
+```{r, echo = FALSE, out.width="45%"}
+knitr::include_graphics("https://images-na.ssl-images-amazon.com/images/I/91CJLS0pRJL.jpg")
+```
 
 <!---- PARTIE XXX ---------------->
 
