--- a/slides-doc.Rmd
+++ b/slides-doc.Rmd
@@ -143,10 +143,12 @@ Plan de la présentation :
 ---
 # Spécificités du projet
 
+.sauterligne2[
 Le projet `utilitR` présente trois particularités :
+]
 
 - Une démarche collaborative et _open source_ ;
-- Un exemple de publication reproductible ;
+- Une publication entièrement reproductible ;
 - Une documentation adaptée aux besoins des agents.
 
 
@@ -167,14 +169,13 @@ Le projet `utilitR` présente trois particularités :
     + `Git` `r fontawesome::fa("fab fa-git-alt")` ;
     + `Github` `r fontawesome::fa("fab fa-github")`.
 
+**Le projet `utilitR` est un projet collaboratif et ouvert à tous, auquel tous les agents peuvent contribuer.**
+
 ---
 # Spécificités du projet
 ## Un exemple de publication reproductible
 
-<!-- * Une documentation pensée pour le statisticien : -->
-<!--     + Recommandations adaptées au contexte de travail des agents du service statistique public ; -->
-<!--     + Exemples sur [données réelles Insee](https://www.insee.fr) (grâce au _package_ [`doremifasol`](https://github.com/InseeFrLab/DoReMIFaSol)). -->
-
+* La documentation est rédigée à l'aide de R Markdown, outil qui permet de rassembler paragraphes textes et blocs de code en un seul code source ;
 * Processus de publication à l'état de l'art :
     + Plusieurs _outputs_ (site web `r fontawesome::fa("fab fa-firefox")`, livre PDF `r fontawesome::fa("fas fa-file-pdf")`) avec les mêmes codes sources ;
     + Publication automatique à chaque modification des fichiers sources ;
@@ -183,8 +184,10 @@ Le projet `utilitR` présente trois particularités :
 * Défis techniques surmontés ont permis des évolutions de l'écosystème `R Markdown` :
     + Solutions bénéficiant à l'ensemble de la communauté `r fontawesome::fa("fab fa-r-project")`.
 
+--
+
 .sauterligne[
-Le projet `utilitR` est un laboratoire qui préfigure les évolutions des méthodes de travail des statisticiens.
+**Le projet `utilitR` est un laboratoire qui préfigure les évolutions des méthodes de travail des statisticiens.**
 ]
 
 ---
@@ -194,6 +197,10 @@ Le projet `utilitR` est un laboratoire qui préfigure les évolutions des métho
 La documentation formule des recommandations claires sur les outils et les _packages_ adaptés à chaque tâche, et comporte des conseils et des remarques relatifs aux bonnes pratiques et est illustrée par des exemples reproductibles utilisant des données de l'Insee.
 
 --
+
+.sauterligne[
+La documentation comprend quatre types d'informations mis en évidence dans des encadrés colorés.
+]
 
 .sauterligne2[
 .small80[
@@ -684,9 +691,26 @@ Il est nettement plus simple de sélectionner des colonnes avec `fread()` qu'ave
 # Réaliser des tâches standards avec `R`
 ## Références
 
+La documentation `utilitR` est un point d'entrée non exhaustif dans l'environnement `R`. C'est pourquoi chaque fiche se termine par une liste de références pour aller plus loin. Des références en français sont incluses dans la plupart des cas.
 
-A COMPLETER
-
+.sauterligne[
+.extraitdoc[
+.small80[
+* sur le *package* `stringr` :
+    - la [documentation](https://www.rdocumentation.org/packages/stringr) du *package* (en anglais) ;
+    - une [vignette](https://cran.r-project.org/web/packages/stringr/vignettes/stringr.html) d'introduction à `stringr` (en anglais) ;
+    - un [aide-mémoire](https://github.com/rstudio/cheatsheets/raw/master/strings.pdf) sur `stringr` et les expressions régulières ;
+* sur les expressions régulières :
+    - [une page en français sur la construction des expressions régulières avec R](https://thinkr.fr/r-les-expressions-regulieres/) ;
+    - un très bon [article de blog](http://perso.ens-lyon.fr/lise.vaudor/strings-et-expressions-regulieres/) en français sur les expressions régulières en `R` ;
+    - une [vignette](https://cran.r-project.org/web/packages/stringr/vignettes/regular-expressions.html) sur les expressions régulières avec `stringr` (en anglais) ;
+    - [un aide-mémoire en anglais sur la construction des expressions régulières avec R](https://github.com/rstudio/cheatsheets/raw/master/strings.pdf) ;
+* sur le *package* `RVerbalExpressions` :
+    - la [documentation](https://cran.r-project.org/web/packages/RVerbalExpressions/RVerbalExpressions.pdf) du *package* (en anglais) ;
+    - une [vignette](https://cran.r-project.org/web/packages/RVerbalExpressions/vignettes/examples.html) d'exemples d'utilisation du *package* (en anglais).
+]
+]
+]
 
 ---
 # Diffusion de la documentation
@@ -842,11 +866,11 @@ L'automatisation de ces processus présente de multiples avantages :
 .small90[
 .auteurs[
 
-Contributeurs : Raphaële Adjerad, Mathias André, Pierre-Yves Berrard, Lionel Cacheux, Arthur Cazaubiel, Sylvain Daubrée, Arlindo Dos Santos, Alexis Eidelman, Marie-Emmanuelle Faure, Gilles Fidani, Lino Galiana, Gaëlle Genin, Pierre Lamarche, Claire Legroux, Romain Lesur, Jean-Daniel Lomenède, Pascal Mercier, Olivier Meslin, Géraldine Rochambeau, Milena Suarez Castillo, Cédric Tassart.
+Contributeurs : Raphaële Adjerad, Mathias André, Pierre-Yves Berrard, Lionel Cacheux, Arthur Cazaubiel, Frédérique Cornuau, Sylvain Daubrée, Aurélien d'Isanto, Arlindo Dos Santos, Alexis Eidelman, Marie-Emmanuelle Faure, Gilles Fidani, Lino Galiana, Gaëlle Genin, Pierre Lamarche, Claire Legroux, Romain Lesur, Jean-Daniel Lomenède, Pascal Mercier, Olivier Meslin, Violaine Poirot, Géraldine Rochambeau, Clément Rousset, Milena Suarez Castillo, Cédric Tassart.
 
 Coordination : Lino Galiana et Olivier Meslin.
 
-Comité de parrainage : Arnaud Degorre, Benoît Rouppert, Patrick Sillard et Sébastien Roux soutien.
+Comité de parrainage : Arnaud Degorre, Benoît Rouppert, Patrick Sillard et Sébastien Roux.
 
 Logo : Anna Schlaifer.
 
