ajoute switch eval si fichiers absents

--- a/atelier_import_fichiers.Rmd
+++ b/atelier_import_fichiers.Rmd
@@ -29,6 +29,7 @@ output:
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
+knitr::opts_chunk$set(eval = TRUE)
 ```
 
 .sauterligne3[
