--- a/slides-colab.Rmd
+++ b/slides-colab.Rmd
@@ -1,7 +1,7 @@
 ---
 title : "__`utilitR`__"
 subtitle : "Une documentation collaborative sur `R`"
-author : "Lino Galiana, Olivier Meslin"
+author : "Lino Galiana"
 date : "9 juin 2021"
 output:
   xaringan::moon_reader:
