--- a/Atelier_graphiques.Rmd
+++ b/Atelier_graphiques.Rmd
@@ -52,75 +52,114 @@ Cet atelier vise à montrer comment on peut utiliser de la documentation `utilit
 
 ---
 # Atelier réaliser des graphiques
-## Reproduire les exemples
+## Méthode
 
-.sauterligne3[
-### Maintenant, mais aussi plus tard
-]
+- Je vais vous présenter les outils `esquisse` et `ggplot2`, sur le plan théorique et avec des exemples.
+- Je vais exécuter des exemples dans un service RStudio sur le SSP Cloud.
 
-.sauterligne2[
-### [Lien vers service SSPCloud](https://auth.lab.sspcloud.fr/auth/realms/sspcloud/protocol/openid-connect/auth?client_id=onyxia&redirect_uri=https%3A%2F%2Fdatalab.sspcloud.fr%2Flauncher%2Finseefrlab-helm-charts-datascience%2Frstudio%3Fonyxia.friendlyName%3D%25C2%25ABrstudio-utilitr%25C2%25BB%26init.personnalInit%3D%25C2%25ABhttps%253A%252F%252Fraw.githubusercontent.com%252FInseeFrLab%252FutilitR%252Fmaster%252Fresources%252Finit_9juin.sh%25C2%25BB%26r.version%3D%25C2%25ABinseefrlab%252Futilitr%253A0.7.0%25C2%25BB&state=29ec218a-93ef-4ec3-8072-beff09879771&response_mode=query&response_type=code&scope=openid&nonce=ad6c2bf1-c186-4200-a5eb-6b7479d886d9&powerhooks_useGlobalState_lng=%5B%22fr%22%5D&powerhooks_useGlobalState_isDarkModeEnabled=%5Btrue%5D&powerhooks_useGlobalState_lastDelayedTime=%5B1622756583698%5D&powerhooks_useGlobalState_isExpanded=%5Btrue%5D) (→ discussion Zoom)
-]
+--
+
+.sauterligne[Deux façons de suivre cet atelier :]
+
+- Vous pouvez vous contenter d'assister à la présentation ;
+- Vous pouvez reproduire les exemples en même temps que moi en lançant votre propre service RStudio sur le SSP Cloud => __aucune obligation__.
 
 .sauterligne[
-### *(pas une obligation, juste une suggestion)*
+Le lien vers le service RStudio du SSP Cloud est disponible sur cette page : https://www.utilitr.org/conferences/decouverte-utilitr/  
 ]
 
-.sauterligne2[
-### Données existant sur insee.fr
+--
+
+.remarque[
+Vous pourrez reproduire les exemples plus tard.
 ]
 
 ---
-
-# Importer des fichiers plats
-
-.sauterligne3[
-### Objectif : importer fichiers au format texte avec séparateurs de champs
-]
+# Réaliser des graphiques avec `R`
 
 .sauterligne2[
-Exemple :
-]
-
-```
-REG;DEP;DEPCOM;DCIRIS;AN;TYPEQU;NB_EQUIP
-84;01;01001;01001;2019;A401;2
-84;01;01001;01001;2019;A404;4
-84;01;01001;01001;2019;A405;2
-84;01;01001;01001;2019;A504;1
-84;01;01001;01001;2019;A507;1
-84;01;01001;01001;2019;B203;1
-84;01;01001;01001;2019;C104;1
-84;01;01001;01001;2019;D233;1
-84;01;01001;01001;2019;F102;1
-84;01;01001;01001;2019;F111;1
-84;01;01001;01001;2019;F113;1
-```
-
----
-
-# Importer des fichiers plats
-
-.sauterligne3[
-
 .recommandation[
-
-.sauterligne2[
-* **données < 1 Go** <br/>→ *package* `{readr}` : fonctions `read_csv` et `read_delim`
+* Il est recommandé d'utiliser le *package* `ggplot2` qui permet de réaliser et de personnaliser un grand nombre de représentations graphiques ;
+* Il est conseillé aux utilisateurs débutants d'utiliser l'*add-in* `esquisse` pour se familiariser avec `ggplot2`.
 ]
-.sauterligne2[
-* **données > 1 Go** <br/>→ *package* `{data.table}` : fonction `fread`
-]
-.sauterligne2[
-* *package* `{csvread}` et fonctions natives de **R** `read.csv` et `read.delim` déconseillés
 ]
 
+--
+
+.sauterligne2[
+Plan de la présensation :
 ]
 
-]
+- utiliser l'_add-in_ `equisse` pour se familiariser avec `ggplot2` ;
+- utiliser directement `ggplot2`.
 
 ---
+# Découvrir `ggplot2` avec l'_add-in_ `esquisse`
 
+Le _package_ `esquisse` propose une interface graphique qui facilite la construction de graphiques avec `ggplot2`. L'objectif de ce *package* est de vous aider à construire rapidement un code `ggplot2` pour faire le graphique que vous voulez.
+
+--
+
+.remarque[
+**l'utilisation d'`esquisse` ne remplace pas l'écriture d'un code `ggplot2`, et cet _add-in_ ne doit pas être utilisé pour réaliser et exporter un graphique sans sauvegarder le code qui le produit** (sinon vous ne pourrez ni reproduire ni modifier votre graphique par la suite).
+]
+
+--
+
+.conseil[
+L'interface graphique d'`esquisse` est assez gourmande en ressources, il est donc déconseillé de l'utiliser avec des données volumineuses (plus de 100 000 observations). Si vous êtes dans cette situation, **il est fortement conseillé d'utiliser `esquisse` sur une petite partie de vos données** (les 1 000 ou 10 000 premières lignes par exemple).
+]
+
+
+---
+# Découvrir `ggplot2` avec l'_add-in_ `esquisse`
+
+```{r}
+
+```
+
+
+
+
+---
+# Réaliser des graphiques avec `R` avec l'_add-in_ `esquisse`
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+---
 background-image: url('resources/logo-utilitr.png')
 background-size: 7cm
 background-position: 8.5cm 3cm
